# rpc-gas-simulation

./: CMakeLists.txt  CMakelists.txt  GasTableGenerator.cc  Geometry.txt  README.md  sim.cc
Analysis/: AnalysisNotebook.ipynb
Analysis/Data/: output_0.root  output_1.root
include/: PMDetectorConstruction.hh  PMSensitiveDetector.hh
include/garfield/: GasTableGenerator.h
include/geometry/: DetectorConstruction.h  SensitiveDetector.h
include/physics/: ActionInitialization.h  PhysicsList.h  PrimaryGeneratorAction.h  RunAction.h
macros/: run.mac  vis.mac
src/: PMDetectorConstruction.cc  PMPrimaryGenerator.cc  PMRunAction.cc  PMSensitiveDetector.cc  README.md  main.cpp
src/garfield/: GasTableGenerator.cpp
src/geometry/: DetectorConstruction.cpp  SensitiveDetector.cpp
src/physics/: ActionInitialization.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp
